Renamed for part-2

--- a/views/templates/index.jade
+++ b/views/templates/index.jade
@@ -1,4 +1,4 @@
-h3 Social Login: Client-side login + Server-side verification
+h3 Social Login: Client-side login + Server-side user management
 p Status: {{ login.getStatus() }}
 div(ng-show='login.isLoggedIn()')
 	p Display name: {{ login.user.displayName }}
