now isLoggedIn should work

--- a/views/navbar.jade
+++ b/views/navbar.jade
@@ -17,8 +17,8 @@ nav#navbar-top.navbar.navbar-default(role='navigation', ng-controller='navContro
 					span#signInButton.g-signin(
 						data-width='wide',
 						data-scope='https://www.googleapis.com/auth/plus.profile.emails.read')
-				li.profileName(ng-show='login.user')
+				li.profileName(ng-show='login.isLoggedIn()')
 					p.navbar-text {{ login.user.displayName }}
 						a.text-right(ng-click='login.logout()') (Sign out)
-				li.profileImage(ng-show='login.user')
+				li.profileImage(ng-show='login.isLoggedIn()')
 					img.img-circle(ng-src='{{ getProfileImageUrl() }}')
