Fixed ui for new user object format

--- a/views/navbar.jade
+++ b/views/navbar.jade
@@ -18,7 +18,7 @@ nav#navbar-top.navbar.navbar-default(role='navigation', ng-controller='navContro
 						data-width='wide',
 						data-scope='https://www.googleapis.com/auth/plus.profile.emails.read')
 				li.profileName(ng-show='login.isLoggedIn()')
-					p.navbar-text {{ login.user.displayName }}
+					p.navbar-text {{ login.user.name }}
 						a.text-right(ng-click='login.logout()') (Sign out)
 				li.profileImage(ng-show='login.isLoggedIn()')
 					img.img-circle(ng-src='{{ getProfileImageUrl() }}')
